# gold_gap

./: .gitignore  README.md  app.py  config.json  data.json  data_fetcher.py  generate_data.py  manifest.webmanifest  package.json  pyproject.toml  requirements.txt  sw.js
.github/workflows/: ci.yml  deploy.yml  update-data.yml
docs/: project-review.html
goldgap/: __init__.py  alerts.py  assets.py  cache.py  constants.py  og_image.py  orchestrators.py  serialize.py
goldgap/domain/: __init__.py  gap.py  merge.py  periods.py
goldgap/sources/: __init__.py  bithumb.py  common.py  exchange_candles.py  naver_etf.py  upbit.py  wgc.py  yahoo.py
static/: style.css
static/js/: charts.js  config.js  decompose.js  format.js  i18n.js  live-quotes.js  main.js  market.js  periods.js  stats.js  table-sort.js
templates/: index.html
tests/: conftest.py  test_alerts.py  test_generate_cli.py  test_market.py  test_merge.py  test_og_image.py  test_periods.py  test_periods_regression.py  test_serialize.py
tests/js/: decompose.test.mjs  format.test.mjs  i18n.test.mjs  market.test.mjs  periods.test.mjs  stats.test.mjs  table-sort.test.mjs
